syntax = "proto3";
// client and server will both use this

option optimize_for = SPEED;
// option optimize_for = LITE_RUNTIME;
// option optimize_for = CODE_SIZE;
// --cpp_out=lite:,--cpp_out=
option cc_enable_arenas = true;

option go_package = "github.com/atframework/atsf4g-go/component-protocol-public/pbdesc/protocol/pbdesc";

import "google/protobuf/descriptor.proto";
import "protocol/extension/extensions_error_code.proto";
import "protocol/extension/com.const.extension.proto";

package proy;

option (CONST_SETTINGS) = {
  time_tolerate: 10
};

// limits
enum EnConstLimits {
  EN_CL_UNKNOWN = 0;
  EN_CL_MAX_PROTOCOL_LENGTH = 262144;  // message length limit: 256K
  EN_CL_MAX_OPEN_ID_LENGTH = 64;       // openid length limit
  EN_CL_MAX_AUTH_TOKEN_LENGHT = 128;   // token length limit
  EN_CL_STANDARD_RATE = 10000;         // 所有标准比例都配置成万分比
}

enum EnMsgOpType {
  EN_MSG_OP_TYPE_MIXUP = 0;           // 混合模式
  EN_MSG_OP_TYPE_STREAM = 1;          // 流,如果上行包时流，那么下行包也是流
  EN_MSG_OP_TYPE_UNARY_REQUEST = 2;   // 请求-应答模式，请求包
  EN_MSG_OP_TYPE_UNARY_RESPONSE = 3;  // 请求-应答模式，回应包
};

// account type
enum EnAccountTypeID {
  EN_ATI_ACCOUNT_INNER = 0;      // inner: username/password
  EN_ATI_ACCOUNT_IOS_GUEST = 1;  // ios guest
}

// channel id
enum EnPlatformChannelID {
  EN_PCI_NONE = 0;              // NONE
  EN_PCI_APPLE_GAMECENTER = 1;  // 苹果GAMECENTER渠道
}

// system type
enum EnSystemID {
  EN_OS_UNKNOWN = 0;
  EN_OS_WINDOWS = 1;
  EN_OS_LINUX = 2;
  EN_OS_MACOS = 3;
  EN_OS_IOS = 4;
  EN_OS_TVOS = 5;
  EN_OS_ANDROID = 6;
  EN_OS_WEBGL = 7;
  EN_OS_UWP = 8;
  EN_OS_XBOX = 9;
  EN_OS_PS = 10;
  EN_OS_SWITCH = 11;
}

// 模拟器ID
enum EnWellKnownSimulatorID {
  EN_WKS_ID_NONE = 0;               // 未使用模拟器
  EN_WKS_ID_TX_GAME_ASSISTANT = 1;  // 腾讯手游助手
}

// update type
enum EnUpdateType {
  EN_UPDATE_NONE = 0;              // no upgrade
  EN_UPDATE_INVALID = -1;          // error parameters
  EN_UPDATE_DEFAULT_RECOM = 1;     // recommand resource upgrade
  EN_UPDATE_PACKAGE_RECOM = 2;     // recommand package upgrade
  EN_UPDATE_FORCE_START = 1024;    // force upgrade bound
  EN_UPDATE_DEFAULT_FORCE = 1025;  // force resource upgrade
  EN_UPDATE_PACKAGE_FORCE = 1026;  // force package upgrade
}

// chat channel type
enum EnChatChannelType {
  EN_CCT_INVALID = 0;              // invalid
  EN_CCT_ALL_DEFAULT = 1001;       // all zones
  EN_CCT_ALL_BOUND = 2000;         // all zones bound
  EN_CCT_ZONE_DEFAULT = 2001;      // one zone
  EN_CCT_ZONE_BOUND = 3000;        // one zone bound
  EN_CCT_PERSONAL_DEFAULT = 3001;  // personal
  EN_CCT_PERSONAL_BOUND = 4000;    // personal bound

  EN_CCT_SUB_GUILD = 8001;  // subcribe-guild
}

// item change type
enum EnItemChgMainType {
  EN_ICMT_UNKNOWN = 0;  // unknown
  EN_ICMT_USE = 1;      // use
  EN_ICMT_SALE = 2;     // sale
  EN_ICMT_BUY = 3;      // 使用资源
}

// item change sub type
enum EnItemChgSubType {
  EN_ICST_DEFAULT = 0;  // default
}

// @see atframework/service/atgateway/protocols/libatgw_protocol_api.h
// @see atframework::gateway::close_reason_t
enum EnCloseReasonType {
  EN_CRT_UNKNOWN = 0;
  // 0x00 - 0x100 是atgateway内部的网络层可重连关闭原因
  EN_CRT_TFRAMEHEAD_REASON_SELF_CLOSE = 7 [(error_code.description) = "服务器主动下发关闭"];
  // 0x10000 - 0x10100 是atgateway内部的网络层不可重连关闭原因

  // 0x20000 == 131072
  // 0x20000 - 0x30000 是自定义网络层可重连原因
  EN_CRT_SESSION_KICKOFF_BY_SERVER = 131073;  // kickoff by server
  EN_CRT_ANOTHER_DEVICE_LOGIN = 188888 [(error_code.description) = "其他设备登入"];

  // 0x30000 == 196608
  // 0x30000 - 0x40000 是自定义网络层不可重连，逻辑层可重连关闭原因
  EN_CRT_SESSION_NOT_FOUND = 196609;  // session不存在
  EN_CRT_SPEED_WARNING = 196610;      // 游戏速度异常
  EN_CRT_RESET_BY_PEER = 196611;      // 客户端主动关闭或丢失连接

  // 0x40000 == 262144
  // 0x40000 - 0x50000 是自定义网络层不可重连，逻辑层不可重连关闭原因
  EN_CRT_LOGIN_BAN = 262145;  // 封号
}

enum EnRouterObjectType {
  EN_ROT_INVALID = 0;
  EN_ROT_PLAYER = 1;
}

// error code
enum EnErrorCode {
  EN_SUCCESS = 0 [(error_code.description) = "成功"];
  EN_ERR_UNKNOWN = -1
                   [(error_code.description) = "未知异常"];
  EN_ERR_TIMEOUT = -101
                   [(error_code.description) = "超时"];
  EN_ERR_INVALID_PARAM = -102
                         [(error_code.description) = "参数错误"];
  EN_ERR_CANT_AFFORD = -103
                       [(error_code.description) = "买不起"];
  EN_ERR_NOT_LOGIN = -104
                     [(error_code.description) = "没有登录"];
  EN_ERR_NOT_GM = -105
                  [(error_code.description) = "没有GM权限"];
  EN_ERR_SYSTEM = -106
                  [(error_code.description) = "服务器系统错误"];
  EN_ERR_USER_NOT_FOUND = -107
                          [(error_code.description) = "没有找到这个玩家"];
  EN_ERR_REWARD_RECEIVED = -108
                           [(error_code.description) = "这个奖励已经领取"];
  EN_ERR_NOT_FOUND_UUID = -109
                          [(error_code.description) = "uuid没有找到"];
  EN_ERR_MANUAL_DISCONNECT = -110
                             [(error_code.description) = "主动断开连接"];
  EN_ERR_LOST_CONNECTION = -111
                           [(error_code.description) = "丢失网络连接"];
  EN_ERR_CONNECT_FAILED = -112
                          [(error_code.description) = "无法连接到服务器"];
  EN_ERR_MAINTENANCE = -113
                       [(error_code.description) = "服务器正在维护"];
  EN_ERR_SYSTEM_BUSY = -114
                       [(error_code.description) = "服务器系统繁忙，请稍后重试"];
  EN_ERR_SYSTEM_BAD_PACKAGE = -115
                              [(error_code.description) = "包结构错误"];
  EN_ERR_SYSTEM_ACCESS_DENY = -116
                              [(error_code.description) = "权限不足"];
  EN_ERR_SYSTEM_CONFIG_INVALID = -117
                                 [(error_code.description) = "配置错误"];
  EN_ERR_DB_RECORD_NOT_FOUND = -118
                               [(error_code.description) = "数据未找到"];
  EN_ERR_NOT_IMPLEMENTED = -119
                           [(error_code.description) = "功能未实现"];
  EN_ERR_DB_CAS_CHECK_FAILED = -120
                               [(error_code.description) = "数据库CAS检查失败"];
  EN_ERR_RPC_NO_TASK = -121
                       [(error_code.description) = "不在协程任务中"];
  EN_ERR_RPC_EXITING = -122
                       [(error_code.description) = "协程退出"];
  EN_ERR_ACTOR_MAX_PENDING_COUNT = -123
                                   [(error_code.description) = "Actor达到最大长度"];
  EN_ERR_ALREADY_LOGIN = -124
                         [(error_code.description) = "在线中"];
  EN_ERR_DB_RECORD_EXIST = -125
                           [(error_code.description) = "数据库记录已存在"];
  EN_ERR_NAME_LENGTH_INVALID = -126
                               [(error_code.description) = "名字长度无效"];
  EN_ERR_NAME_DUPLICATE = -127
                          [(error_code.description) = "名字重复"];
  // router
  EN_ERR_ROUTER_NOT_WRITABLE = -151
                               [(error_code.description) = "路由不可写"];
  EN_ERR_ROUTER_TTL_EXTEND = -152
                             [(error_code.description) = "TTL超出限制"];
  EN_ERR_ROUTER_CLOSING = -153
                          [(error_code.description) = "路由系统正在关闭"];
  EN_ERR_ROUTER_EAGAIN = -154
                         [(error_code.description) = "重试"];
  EN_ERR_ROUTER_BUSSINESS_VERSION_DENY = -155
                                         [(error_code.description) = "对象版本号禁止拉取"];
  EN_ERR_ROUTER_NOT_FOUND = -156
                            [(error_code.description) = "路由信息找不到"];
  EN_ERR_ROUTER_OBJECT_NOT_WRITEABLE = -157
                                       [(error_code.description) = "路由对象不可写"];
  EN_ERR_ROUTER_NOT_EXPIRED = -158
                              [(error_code.description) = "路由未过期"];
  // openapi
  EN_ERR_OPENAPI_LIMIT = -201
                         [(error_code.description) = "openapi调用频率限制"];
  EN_ERR_OPENAPI_CGI_FAIL = -202
                            [(error_code.description) = "openapi内部cgi错误"];
  EN_ERR_OPENAPI_CALL_FAIL = -203
                             [(error_code.description) = "openapi内部调用错误"];
  EN_ERR_OPENAPI_PARSE_FAIL = -204
                              [(error_code.description) = "openapi调用解析失败"];
  EN_ERR_OPENAPI_PF_FAIL = -205
                           [(error_code.description) = "openapi调用pf无效"];
  EN_ERR_OPENAPI_PAY_TOKEN_FAIL = -206
                                  [(error_code.description) = "openapi pay token 失效"];
  EN_ERR_OPENAPI_PAY_MAINTAIN = -207
                                [(error_code.description) = "支付服务器维护中，暂不可用"];

  EN_ERR_TEXT_HAS_DIRTY_WORD = -301
                               [(error_code.description) = "检测到脏字"];

  EN_ERR_RANDOM_POOL_NOT_RANDOM_POOL = -311
                                       [(error_code.description) = "非随机池"];
  EN_ERR_RANDOM_POOL_NOT_FOUND = -312
                                 [(error_code.description) = "随机池未找到"];
  EN_ERR_RANDOM_POOL_RECURSIVE = -313
                                 [(error_code.description) = "随机池循环递归"];
  EN_ERR_RANDOM_POOL_TYPE_NOT_SUPPORT = -314
                                        [(error_code.description) = "类型未支持"];
  EN_ERR_RANDOM_POOL_CUSTOM_TIMES_NOT_MATCH = -315
                                              [(error_code.description) = "自选个数错误"];
  EN_ERR_RANDOM_POOL_CUSTOM_INDEX_NOT_MATCH = -316
                                              [(error_code.description) = "自选位置错误"];
  EN_ERR_RANDOM_POOL_CUSTOM_INDEX_REPEAT = -317
                                              [(error_code.description) = "自选重复"];

  // 登录服务的返回错误码
  EN_ERR_LOGIN_BAN = -401
                     [(error_code.description) = "账号被临时封停"];
  EN_ERR_LOGIN_GM_LOCKED = -402
                           [(error_code.description) = "GM正在操作，请稍后再试"];
  EN_ERR_LOGIN_VERSION = -403
                         [(error_code.description) = "版本错误或需要更新"];
  EN_ERR_LOGIN_PROTO_VERSION = -404
                               [(error_code.description) = "协议版本错误"];
  EN_ERR_LOGIN_AUTHORIZE = -405
                           [(error_code.description) = "认证失败"];
  EN_ERR_LOGIN_ALREADY_ONLINE = -406
                                [(error_code.description) = "仍然在线且踢下线失败"];
  EN_ERR_LOGIN_INVALID_PLATFORM = -407
                                  [(error_code.description) = "平台不受支持"];
  EN_ERR_LOGIN_OTHER_DEVICE = -408
                              [(error_code.description) = "在其他地方有登入"];
  EN_ERR_LOGIN_NOT_LOGINED = -409
                             [(error_code.description) = "未登录"];
  EN_ERR_LOGIN_OPENID = -410
                        [(error_code.description) = "openid错误"];
  EN_ERR_LOGIN_SERVER_PENDING = -411
                                [(error_code.description) = "游戏暂未开放"];
  EN_ERR_LOGIN_SPEED_WARNING = -412
                               [(error_code.description) = "游戏速度异常，使用加速器会被封号一段时间"];
  EN_ERR_LOGIN_OPENID_NOT_FOUND = -413
                                  [(error_code.description) = "openid未找到"];
  EN_ERR_LOGIN_DEVICEID_EMPTY = -414
                                [(error_code.description) = "device_id 为空"];
  EN_ERR_LOGIN_OPENID_NOT_MATCH = -415
                                  [(error_code.description) = "上传上来的openid不匹配"];
  EN_ERR_LOGIN_CREATE_PLAYER_FAILED = -416
                                      [(error_code.description) = "创建用户失败"];
  EN_ERR_LOGIN_USERID_NOT_MATCH = -417
                                  [(error_code.description) = "用户ID不匹配"];
  EN_ERR_LOGIN_INVALID_CHANNEL = -418
                                 [(error_code.description) = "渠道不受支持"];

  // 道具模块错误码
  EN_ERR_ITEM_NOT_ENOUGH = -501
                           [(error_code.description) = "道具不足"];
  EN_ERR_ITEM_NOT_FOUND = -502
                          [(error_code.description) = "道具未找到"];
  EN_ERR_ITEM_INVALID_TYPE_ID = -503
                                [(error_code.description) = "道具类型无效"];
  EN_ERR_ITEM_TOO_MANY = -504
                         [(error_code.description) = "道具过多"];
  EN_ERR_MONEY_COIN_NOT_ENOUGH = -505
                                 [(error_code.description) = "金币不足"];
  EN_ERR_MONEY_CASH_NOT_ENOUGH = -506
                                 [(error_code.description) = "点券不足"];
  EN_ERR_ITEM_CANNOT_USE = -507
                                [(error_code.description) = "道具不可使用"];

  // 玩家相关错误码
  EN_ERR_USER_MIN_LEVEL_LIMIT = -701
                                [(error_code.description) = "用户等级过低"];
  EN_ERR_USER_MAX_LEVEL_LIMIT = -702
                                [(error_code.description) = "用户等级过高"];
  EN_ERR_USER_CLIENT_OPTIONS_SIZE_LIMIT = -703
                                          [(error_code.description) = "客户端设置存储达到最大上限"];
  EN_ERR_USER_LEVEL_CONFIG_NOT_FOUND = -704
                                       [(error_code.description) = "用户等级配置未找到"];

  // 通用条件错误码
  EN_ERR_CONDITION_DATETIME_NOT_START = -801
                                        [(error_code.description) = "时间未开始"];
  EN_ERR_CONDITION_DATETIME_ALREADY_END = -802
                                          [(error_code.description) = "时间已结束"];
  EN_ERR_CONDITION_RULE_ID_NOT_FOUND = -803
                                       [(error_code.description) = "规则ID未找到"];
  EN_ERR_CONDITION_DAILY_LIMIT = -831
                                 [(error_code.description) = "已达到每日上限"];
  EN_ERR_CONDITION_WEEKLY_LIMIT = -832
                                  [(error_code.description) = "已达到每周上限"];
  EN_ERR_CONDITION_MONTHLY_LIMIT = -833
                                   [(error_code.description) = "已达到每月上限"];
  EN_ERR_CONDITION_SUM_LIMIT = -834
                               [(error_code.description) = "已达到总限制上限"];
  EN_ERR_CONDITION_CUSTOM_LIMIT = -835
                                  [(error_code.description) = "已达到上限"];
  EN_ERR_CONDITION_DYNAMIC_LIMIT = -836
                                   [(error_code.description) = "已达到上限"];

  // 任务错误码 2000-2299
  EN_ERR_QUEST_CONFIG_NOT_FOUND = -2001
                                  [(error_code.description) = "任务配置未找到"];
  EN_ERR_QUEST_NOT_COMPLETED = -2002
                               [(error_code.description) = "任务未完成"];
  EN_ERR_QUEST_COMPLETED_DATA_NOT_FOUND = -2003
                                          [(error_code.description) = "任务完成数据未找到"];
  EN_ERR_QUEST_ALREADY_ACCEPTED = -2004
                                  [(error_code.description) = "任务已经接取"];
  EN_ERR_QUEST_STATUS_NOT_MATCH = -2005
                                  [(error_code.description) = "任务状态不匹配"];

  // 商城错误码 2600-2699
  EN_ERR_MALL_PRODUCT_NOT_FOUND = -2601
                                 [(error_code.description) = "商城商品未找到"];
  EN_ERR_MALL_PRODUCT_NOT_ON_SELL = -2602
                                 [(error_code.description) = "商城商品未上架"];
  EN_ERR_MALL_MALL_NOT_FOUND = -2603
                                 [(error_code.description) = "商城未找到"];
  EN_ERR_MALL_PRODUCT_INIT_FAILED = -2604
                                 [(error_code.description) = "商城商品初始化失败"];

  // 客户端错误码，服务器不关心 800000-999999
  EN_ERR_CLIENT_INTERNAL_CODE_BEGIN = -800000;
  // 注意错误码不能小于 -999999，便于区分服务器错误码和客户端错误码
}
